--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Mehmet Basaran</h1>
+<p>Graduate Student in Mathematics at the Ohio State University</p>
 </body>
 </html>
