--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head> 
+<title> Mehmet Basaran</title>
+</head>
+
 <body>
 <h1>Mehmet Basaran</h1>
 <p>Graduate Student in Mathematics at the Ohio State University</p>
