--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 <body>
 <h1>Mehmet Basaran</h1>
-<p>Graduate Student in Mathematics at the Ohio State University</p>
+<p>Graduate Student in Mathematics at <span style="font-size:500%;font-weight:bold;color:#FF0000">The</span> Ohio State University</p>
 </body>
 </html>
