--- a/index.html
+++ b/index.html
@@ -6,6 +6,78 @@
 
 <body>
 <h1>Mehmet Basaran</h1>
-<p>Graduate Student in Mathematics at <span style="font-size:500%;font-weight:bold;color:#FF0000">The</span> Ohio State University</p>
+<p>I am a third year math PhD student at <span style="font-size:300%;font-weight:bold;color:#FF0000">The</span> Ohio State University. I work in number theory under the supervision of <a href="https://people.math.osu.edu/patrikis.1/" target="_blank">
+<b>Stefan Patrikis</b></a>.</p>
+<p>
+<ul>
+<li>
+<a href="https://math.osu.edu/people/basaran.10" target="_blank">
+<b>OSU website</b></a> (with email address and office)
+</li>
+</ul>
+</p>
+<hr>
+<h2>
+CV:
+</h2>
+<ul> 
+<li>PhD (expected), Autumn 21 - present, Advisor: Stefan Patrikis, The Ohio State University</li>
+<li>MSc, Winter 18 - Winter 21, Thesis Advisor: Stefan Wewers, Ulm University</li>
+<li>MSc, Autumn 19 - Spring 20, Syracuse University</li>
+<li>BSc, Winter 15 - Summer 18, Thesis Advisor: Helmut Maier, Ulm University</li>
+</ul>
+<hr>
+<h2>
+Research:
+</h2>
+<ul> 
+<li>Master's thesis: Computation of Galois Extensions of <em>p</em>-adic Number Fields, Advisor: Stefan Wewers</li>
+<li>Bachelor's thesis (in German): Die beiden letzten Ziffern von Primzahlen (The two last digits of primes), Advisor: Helmut Maier</li>
+</ul>
+(Available upon request)
+<hr>
+<h2>
+Teaching:
+</h2>
+<ul> <li>The Ohio State University:
+<ul>
+<li>MATH 1149 (Trigonometry) TA: Spring 23</li>
+<li>MATH 1151 (Calculus 1) TA: Autumn 22</li>
+</ul></li>
+<li> Syracuse University:
+<ul>
+<li>MAT397 (Calculus 3) TA: Autumn 19, Spring 20</li>
+</ul>
+</li>
+<li> Ulm University:
+<ul>
+<li>MathLab TA for Analysis I and/or Linear Algebra I:  Summer 18, Winter 18, Summer 19, Winter 20, Summer 21</li>
+</ul>
+</li>
+</ul>
+<hr>
+<h2>
+Friends:
+</h2>
+<p>
+<ul>
+<li>
+<a href="https://sites.google.com/view/austin-p-allen" target="_blank">
+<b>Austin Allen</b></a>
+</li>
+<li>
+<a href="https://jakehuryn.github.io/" target="_blank">
+<b>Jake Huryn</b></a>
+</li>
+<li>
+<a href="https://wiljanen.github.io/" target="_blank">
+<b>Luke Wiljanen</b></a>
+</li>
+</ul>
+</p>
+<hr>
+<footer>
+<p>Last updated: 9 August 2023</p>
+</footer>
 </body>
 </html>
