--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@ Friends:
 </ul>
 </p>
 <hr>
+<h2>
+Miscellaneous:
+</h2>
+<p>
+<ul>
+<li>
+<a href="https://jakehuryn.github.io/walls-and-doors/" target="_blank">
+<b>WALLS and DOORS</b></a>, Stefan Patrikis's students' seminar organized by Jake Huryn.
+</li>
+</p>
+<hr>
 <footer>
 <p>Last updated: 9 August 2023</p>
 </footer>
