--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
 <body>
 <h1>Mehmet Basaran</h1>
-<p>I am a third year math PhD student at <span style="font-size:300%;font-weight:bold;color:#FF0000">The</span> Ohio State University. I work in number theory under the supervision of <a href="https://people.math.osu.edu/patrikis.1/" target="_blank">
+<p>I am a third year math PhD student at <a href="https://www.osu.edu/" target="_blank">
+<span style="font-size:300%;font-weight:bold;color:#FF0000">The</span> </a>Ohio State University. I work in number theory under the supervision of <a href="https://people.math.osu.edu/patrikis.1/" target="_blank">
 <b>Stefan Patrikis</b></a>.</p>
 <p>
 <ul>
@@ -85,6 +86,7 @@ Miscellaneous:
 <a href="https://jakehuryn.github.io/walls-and-doors/" target="_blank">
 <b>WALLS and DOORS</b></a>, Stefan Patrikis's students' seminar organized by Jake Huryn.
 </li>
+</ul>
 </p>
 <hr>
 <footer>
