--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <body>
 <h1>Mehmet Basaran</h1>
-<p>I am a third year math PhD student at <a href="https://www.osu.edu/" target="_blank">
-<span style="font-size:300%;font-weight:bold;color:#FF0000">The</span></a> Ohio State University. I work in number theory under the supervision of <a href="https://people.math.osu.edu/patrikis.1/" target="_blank">
+<p>I am a fourth year math PhD student at <a href="https://www.osu.edu/" target="_blank">
+<span style="font-size:300%;font-weight:bold;color:#FF0000">The</span></a> Ohio State University. I work in number theory, specifically Galois deformation theory, under the supervision of <a href="https://people.math.osu.edu/patrikis.1/" target="_blank">
 <b>Stefan Patrikis</b></a>.</p>
 <p>
 <ul>
@@ -42,6 +42,8 @@ Teaching:
 </h2>
 <ul> <li>The Ohio State University:
 <ul>
+<li>MATH 1148 (College Algebra) TA: Autumn 24</li>
+<li>MATH 1149 (Trigonometry) TA: Autumn 23</li>
 <li>MATH 1149 (Trigonometry) TA: Spring 23</li>
 <li>MATH 1151 (Calculus 1) TA: Autumn 22</li>
 </ul></li>
@@ -90,7 +92,7 @@ Miscellaneous:
 </p>
 <hr>
 <footer>
-<p>Last updated: 10 August 2023</p>
+<p>Last updated: 14 November 2024</p>
 </footer>
 </body>
 </html>
