--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@ Friends:
 <a href="https://wiljanen.github.io/" target="_blank">
 <b>Luke Wiljanen</b></a>
 </li>
+<li>
+<a href="https://849333622.github.io/" target="_blank">
+<b>Yifei Zhang</b></a>
+</li>
 </ul>
 </p>
 <hr>
@@ -92,7 +96,7 @@ Miscellaneous:
 </p>
 <hr>
 <footer>
-<p>Last updated: 14 November 2024</p>
+<p>Last updated: 20 November 2024</p>
 </footer>
 </body>
 </html>
